chpt04-immobiliare - small various bug fixes